# CRE

./: .gitattributes  .gitignore  CMakeLists.txt  CRE.kdev4  ClassRatioEstimator.cpp  ClassRatioEstimator.hpp  ClassRatioEstimatorJNI.cpp  ClassRatioEstimatorJNI.h  ClassRatioEstimatorRuntime.cpp  ClassRatioEstimatorRuntime.h  Data.cpp  Data.hpp  Kernel.RBF.Armadillo.cpp  Kernel.RBF.Threaded.cpp  Kernel.RBF.cpp  Kernel.hpp  LibSVMFormat.cpp  LibSVMFormat.hpp  Matrix.Dense.Armadillo.cpp  Matrix.Dense.cpp  Matrix.Sparse.cpp  Matrix.Symmetric.cpp  Matrix.hpp  PCA.cpp  PCA.hpp  QuadProg.cpp  QuadProg.hpp  README.md  ScoreFunction.cpp  ScoreFunction.hpp  Stopwatch.cpp  Stopwatch.hpp  Tester.cpp  Tester.hpp  Typedefs.hpp  Utils.cpp  Utils.hpp  bfile2  bigfile  lo1.c  (+4 more)
